public interface IGameUseCase
{
    void Execute();
    void StartGame();
    void PauseGame();
    void EndGame();
}