public interface IScoreUseCase
{
    void AddScore(int points);
    void UpdateCombo();
    void ResetCombo();
}